--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
     <div class="logo">TechPrime</div>
     <nav>
       <a href="{{ '/' | relative_url }}">Home</a>
-      <a href="{{ '/#blog' | relative_url }}">Blog</a>
+      <a href="{{ '/blog/' | relative_url }}">Blog</a>
       <a href="{{ '/#about' | relative_url }}">About</a>
-      <a href="{{ '/#contact' | relative_url }}">Contact</a>
+      <a href="{{ '/contact/' | relative_url }}">Contact</a>
     </nav>
   </header>
   
