--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <a href="{{ '/' | relative_url }}">Home</a>
       <a href="{{ '/blog/' | relative_url }}">Blog</a>
       <a href="{{ '/#about' | relative_url }}">About</a>
-      <a href="{{ '/contact/' | relative_url }}">Contact</a>
+      <a href="{{ '/contact' | relative_url }}">Contact</a>
     </nav>
   </header>
   
